--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "mysql2": "^3.9.7",
+    "nodemailer": "^6.9.13",
     "sequelize": "^6.37.3",
     "sequelize-cli": "^6.6.2",
     "winston": "^3.13.0"
